--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -17,3 +17,8 @@ spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
 spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
 spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
 spring.datasource.hikari.data-source-properties.maintainTimeStats=false
+
+# Enable logging for config troubleshooting
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.zaxxer.hikari.HikariConfig=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
