--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 logging.level.guru=debug
 server.port=8082
+
+#Server Configuration for ActiveMQ
+spring.artemis.host=127.0.0.1
+spring.artemis.port=61616
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
