implemented new inventory listener

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.artemis.host=127.0.0.1
 spring.artemis.port=61616
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+logging.level.guru.sfg=debug
